# llama-index-python-webapp

./: .gitignore
backend/: .gitignore  add_cert.py  main.py  provision-ec2-for-llamaindex.txt  pyproject.toml  python-service.sh
backend/app/: settings.py
backend/app/agents/booking/: __init__.py  base.py
backend/app/api/routers/: chat.py  query.py
backend/app/engine/: __init__.py  constants.py  generate.py  index.py  loader.py
backend/data/: Book1.csv
frontend/: .env  README.md  package-lock.json  package.json
frontend/app/: globals.css
frontend/app/components/: chat-section.tsx  header.tsx
frontend/app/components/ui/chat/: chat-avatar.tsx
