[tool]
[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [ "Jorge Middleton <mail@i-med.com.au>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "^0.109.1"
python-dotenv = "^1.0.0"
llama-index = "^0.10.19"
llama-index-embeddings-huggingface = "^0.1.4"

[tool.poetry.dependencies.uvicorn]
extras = [ "standard" ]
version = "^0.23.2"

[tool.poetry.dependencies.docx2txt]
version = "^0.8"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.1"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
